--- a/index.html
+++ b/index.html
@@ -1,29 +1,30 @@
 <html>
-    <head>
-<script src="script.js"></script>
-    </head>
-    <body>
-        <div id="ecran"></div>
-        <div>
-    <button id="0" onclick="bouttons(0)">0</button>
-    <button id="1" onclick="bouttons(1)">1</button>
-    <button id="2" onclick="bouttons(2)">2</button>
-    <button id="3" onclick="bouttons(3)">3</button>
-    <button id="4" onclick="bouttons(4)">4</button>
-    <button id="5" onclick="bouttons(5)">5</button>
-    <button id="6" onclick="bouttons(6)">6</button>
-    <button id="7" onclick="bouttons(7)">7</button>
-    <button id="8" onclick="bouttons(8)">8</button>
-    <button id="9" onclick="bouttons(9)">9</button></div>
-<div>
-    <button id="" onclick="plus()">+</button>
-    <button id="" onclick="moins()">-</button>
-    <button id="" onclick="diviseur()">/</button>
-    <button id="" onclick="fois()">X</button>  
-</div>
-<div>
-    <button id="" onclick="egal()">=</button>
-    
-</div>
-    </body>
+	<head>
+		<script src="script.js"></script>
+		<style src="style.css"></style>
+	</head>
+	<body>
+		<div id="ecran"></div>
+		<div>
+			<button id="0" onclick="bouttons(0)">0</button>
+			<button id="1" onclick="bouttons(1)">1</button>
+			<button id="2" onclick="bouttons(2)">2</button>
+			<button id="3" onclick="bouttons(3)">3</button>
+			<button id="4" onclick="bouttons(4)">4</button>
+			<button id="5" onclick="bouttons(5)">5</button>
+			<button id="6" onclick="bouttons(6)">6</button>
+			<button id="7" onclick="bouttons(7)">7</button>
+			<button id="8" onclick="bouttons(8)">8</button>
+			<button id="9" onclick="bouttons(9)">9</button>
+		</div>
+		<div>
+			<button id="" onclick="plus()">+</button>
+			<button id="" onclick="moins()">-</button>
+			<button id="" onclick="diviseur()">/</button>
+			<button id="" onclick="fois()">X</button>
+		</div>
+		<div>
+			<button id="" onclick="egal()">=</button>
+		</div>
+	</body>
 </html>
